--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -1,76 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/actionbar"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/actionbar_high"
-    android:background="@color/main_color_blue"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
-    <!--android:layout_marginTop="25dp"-->
-    <!--android:fitsSystemWindows="true"-->
+    android:layout_height="wrap_content"
+    android:background="@color/main_color_blue">
 
-    <ImageView
-        android:id="@+id/btn_go_back"
-        android:layout_width="@dimen/actionbar_high"
-        android:layout_height="match_parent"
-        android:padding="@dimen/actionbar_padding"
-        android:src="@drawable/go_back"
-        android:layout_alignParentLeft="true"/>
-    <TextView
-        android:id="@+id/tv_Consult"
-        android:layout_width="@dimen/actionbar_high"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="咨询"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textsize_h3"
-        android:visibility="invisible"
-        android:layout_alignParentRight="true"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/actionbar_high_48dp">
 
-    <TextView
-        android:id="@+id/txt_TitleBar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/actionbar_high"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textsize_h1"
-        android:visibility="visible"
-        tools:text="哆啦A梦 女 23岁"
-        android:layout_toRightOf="@id/btn_go_back"
-        android:layout_toLeftOf="@id/tv_Consult"/>
+        <ImageView
+            android:id="@+id/img_actionbar_left"
+            android:layout_width="@dimen/actionbar_high_48dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:padding="@dimen/actionbar_padding"
+            android:src="@drawable/go_back" />
 
-    <ImageView
-        android:id="@+id/btn_search"
-        android:layout_width="@dimen/actionbar_high"
-        android:layout_height="match_parent"
-        android:padding="@dimen/actionbar_padding"
-        android:src="@drawable/search_white"
-        android:visibility="invisible"
-        android:layout_alignParentRight="true"/>
+        <TextView
+            android:id="@+id/txt_actionbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/actionbar_high_48dp"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_h1"
+            tools:text="哆啦A梦 女 23岁" />
+
+        <ImageView
+            android:id="@+id/img_actionbar_right"
+            android:layout_width="@dimen/actionbar_high_48dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/actionbar_padding"
+            android:src="@drawable/search_white"
+            android:visibility="invisible" />
 
 
-    <haozuo.com.healthdoctor.view.threePart.common.DrawableClickableEditText
-        android:id="@+id/et_TitleBar_search"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/editview_bg_selector"
-        android:drawableLeft="@drawable/useful_search"
-        android:drawablePadding="8dp"
-        android:drawableRight="@drawable/useful_cancel"
-        android:layout_toRightOf="@id/btn_go_back"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:hint="请搜索关键词"
-        android:maxLines="1"
-        android:paddingLeft="13dp"
-        android:paddingRight="13dp"
-        android:singleLine="true"
-        android:textSize="@dimen/textsize_h3"
-        android:visibility="invisible" />
+    </RelativeLayout>
 
 </RelativeLayout>
+
