--- a/app/src/main/res/layout/content_act.xml
+++ b/app/src/main/res/layout/content_act.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
-
-    <include layout="@layout/actionbar" />
-
-
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/frameContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+</RelativeLayout>
