--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="main_color_blue">#3AB4F1</color>
+
+    <color name="divider_d3">#D3D3D3</color>
+    <color name="divider_e8">#E8E8E8</color>
+
+    <color name="gray">#808080</color><!--灰色 -->
+    <color name="gray_28">#282828</color>
+    <color name="gray_66">#666666</color>
+    <color name="gray_b2">#B2B2B2</color>
+    <color name="gray_ee">#EEEEEE</color>
+    <color name="gray_f6">#F6F6F6</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="light_blue">#6593cb</color>
 </resources>
