--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="textsize_h1">20sp</dimen>
+    <dimen name="textsize_h2">18sp</dimen>
+    <dimen name="textsize_h3">16sp</dimen>
+    <dimen name="textsize_h4">14sp</dimen>
+    <dimen name="textsize_h5">11sp</dimen>
+
+    <dimen name="actionbar_high_48dp">48dp</dimen>
+    <dimen name="actionbar_high_44dp">44dp</dimen>
+    <dimen name="actionbar_padding">10dp</dimen>
+    <dimen name="divider">0.8dp</dimen>
+    <dimen name="divider_1dp">1dp</dimen>
+    <dimen name="divider_2dp">2dp</dimen>
 </resources>
