--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -6,6 +6,7 @@
     <include layout="@layout/actionbar_white" />
 
     <TextView
+        android:id="@+id/test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
