--- a/app/src/main/res/layout/mine_frag.xml
+++ b/app/src/main/res/layout/mine_frag.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_ee"
     android:orientation="vertical">
 
 
-    <include layout="@layout/actionbar" />
+    <include layout="@layout/actionbar_mine" />
 
     <TextView
         android:layout_width="match_parent"
