--- a/app/src/main/res/layout/splash_frag.xml
+++ b/app/src/main/res/layout/splash_frag.xml
@@ -1,13 +1,29 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context="com.ihaozuo.plamexam.view.splash.SplashFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tvSplash"
+        android:layout_marginTop="216dp"
+        android:layout_marginLeft="40dp"
+        android:textColor="@color/white"
+        android:textSize="28sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="@string/app_name" />
+    <TextView
+        android:layout_below="@+id/tvSplash"
+        android:id="@+id/splash_txt2"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="40dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name" />
 
-</FrameLayout>
+</RelativeLayout>
