--- a/app/src/main/res/layout/phone_code_layout.xml
+++ b/app/src/main/res/layout/phone_code_layout.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/TVLayer_phone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:theme="@style/TV_LOGIN">
 
         <AutoCompleteTextView
             android:id="@+id/phone"
@@ -11,7 +14,7 @@
             android:layout_height="@dimen/edittext_high"
             android:completionThreshold="1"
             android:hint="@string/hint_input_phone"
-            android:inputType="textEmailAddress"
+            android:inputType="phone"
             android:maxLines="1"
             android:singleLine="true" />
 
@@ -22,15 +25,17 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/TVLayer_authCode"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            style="@style/TV_LOGIN">
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/et_authCode"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edittext_high"
                 android:hint="@string/hint_input_authcode"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true" />
 
