--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -16,7 +16,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:padding="@dimen/actionbar_padding"
-            android:src="@drawable/go_back" />
+            android:src="@drawable/go_back"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/txt_actionbar_title"
