--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,7 @@
     <dimen name="mine_layout_leftpadding">8dp</dimen>
 
     <dimen name="card_margin">6dp</dimen>
+
+    <dimen name="img_head">40dp</dimen>
+    <dimen name="docinfo_padding">5dp</dimen>
 </resources>
