--- a/app/src/main/res/layout/report_list_frag.xml
+++ b/app/src/main/res/layout/report_list_frag.xml
@@ -5,9 +5,10 @@
 
     <include layout="@layout/actionbar" />
 
-    <WebView
-        android:id="@+id/WebView"
+    <ListView
+        android:id="@+id/listReport"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:divider="@null" />
 
 </LinearLayout>
