--- a/app/src/main/res/drawable/bg_blue_corner_shape.xml
+++ b/app/src/main/res/drawable/bg_blue_corner_shape.xml
@@ -5,7 +5,7 @@
     <!-- 圆角 -->
     <corners android:radius="@dimen/bg_corners" />
     <!-- 填充 -->
-    <solid android:color="@color/white" /><!-- 填充的颜色 -->
+    <solid android:color="@color/main_color_blue" /><!-- 填充的颜色 -->
 
     <!--&lt;!&ndash; 描边 &ndash;&gt;-->
     <stroke
