--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -19,6 +19,7 @@
         android:padding="12dp">
 
         <View
+            android:id="@+id/btn_report"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
