--- a/app/src/main/res/layout/login_frag.xml
+++ b/app/src/main/res/layout/login_frag.xml
@@ -27,10 +27,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:clickable="false"
                 android:text="@string/login"
                 android:textSize="@dimen/textsize_h2"
-                android:textStyle="bold"
-                android:clickable="false"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
