--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="androidColorD">#FFFFBB33</color>
     <color name="androidColorE">#FFFF4444</color>
 
+    <color name="tab_report_checked">#FFFF4444</color>
+
     <color name="main_color_blue">#3AB4F1</color>
 
     <color name="divider_d3">#D3D3D3</color>
