--- a/app/src/main/res/layout/content_act.xml
+++ b/app/src/main/res/layout/content_act.xml
@@ -6,7 +6,8 @@
     <FrameLayout
         android:id="@+id/frameContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
 
 
 </RelativeLayout>
