--- a/app/src/main/res/layout/login_frag.xml
+++ b/app/src/main/res/layout/login_frag.xml
@@ -2,37 +2,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ihaozuo.plamexam.view.login.LoginActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/login_margin_vertical"
+        android:paddingRight="@dimen/login_margin_vertical">
+
+
+        <ImageView
+            android:layout_width="@dimen/logo_height"
+            android:layout_height="@dimen/logo_height"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo" />
+
+        <ImageView
+            android:layout_width="128dp"
+            android:layout_height="31dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/logo_margin"
+            android:layout_marginTop="@dimen/logo_margin"
+            android:src="@drawable/app_title" />
+
+        <include layout="@layout/phone_code_layout" />
+
+
+        <Button
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/btn_bg_selector"
+            android:clickable="false"
+            android:enabled="false"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_h2"
+            android:textStyle="bold" />
 
-            <include layout="@layout/phone_code_layout" />
+        <TextView
+            android:id="@+id/tv_warning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:maxLines="2"
+            tools:text="注册登录即表示您同意我们的\n[掌上体检用户许可协议]" />
 
 
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="match_parent"
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="93dp"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:scaleType="fitXY"
+            android:src="@drawable/login_bg" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignParentBottom="true">
+
+            <TextView
+                android:id="@+id/tv_thirdpart_login"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/login"
-                android:textSize="@dimen/textsize_h2"
-                android:textStyle="bold"
-                android:clickable="false"/>
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="其他方式登录" />
 
-        </LinearLayout>
-    </ScrollView>
+            <View
+                android:layout_width="100dp"
+                android:layout_height="@dimen/divider"
+                android:layout_margin="8dp"
+                android:layout_toLeftOf="@id/tv_thirdpart_login"
+                android:background="@color/divider_d3" />
+
+
+            <View
+                android:layout_width="100dp"
+                android:layout_height="@dimen/divider"
+                android:layout_margin="8dp"
+                android:layout_toRightOf="@id/tv_thirdpart_login"
+                android:background="@color/divider_d3" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/img_thirdpart_logo"
+                    android:layout_weight="1"
+                    android:src="@drawable/qq_logo" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/img_thirdpart_logo"
+                    android:layout_weight="1"
+                    android:src="@drawable/wechat_logo" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/img_thirdpart_logo"
+                    android:layout_weight="1"
+                    android:src="@drawable/weibo_logo" />
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+    </FrameLayout>
+
 
 </LinearLayout>
