--- a/app/src/main/res/layout/phone_code_layout.xml
+++ b/app/src/main/res/layout/phone_code_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/TVLayer_phone"
@@ -16,7 +17,8 @@
             android:hint="@string/hint_input_phone"
             android:inputType="phone"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textSize="@dimen/textsize_h3_16sp"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -28,26 +30,33 @@
             android:id="@+id/TVLayer_authCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TV_LOGIN">
+            app:theme="@style/TV_LOGIN">
 
             <EditText
                 android:id="@+id/et_authCode"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edittext_high"
                 android:hint="@string/hint_input_authcode"
-                android:inputType="text"
+                android:inputType="number"
+                android:maxLength="4"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:textSize="@dimen/textsize_h3_16sp"
+                tools:text="123123123"/>
 
         </android.support.design.widget.TextInputLayout>
 
-        <Button
+        <TextView
             android:id="@+id/btn_getAuthCode"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_gravity="right|bottom"
+            android:gravity="bottom"
+            android:paddingBottom="3dp"
             android:layout_margin="10dp"
-            android:text="@string/get_authcode" />
+            android:text="@string/get_authcode"
+            android:textSize="@dimen/textsize_h3_16sp"
+            android:textColor="@color/main_color_green"/>
 
     </FrameLayout>
 
