--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="androidColorE">#FFFF4444</color>
 
     <color name="main_color_blue">#3AB4F1</color>
+    <color name="main_color_green">#4ED625</color>
 
+    <color name="edittext_color">#666666</color>
     <color name="divider_d3">#D3D3D3</color>
     <color name="divider_e8">#E8E8E8</color>
     <color name="gray">#808080</color><!--灰色 -->
