--- a/app/src/main/res/layout/report_list_frag.xml
+++ b/app/src/main/res/layout/report_list_frag.xml
@@ -5,10 +5,44 @@
 
     <include layout="@layout/actionbar" />
 
-    <ListView
-        android:id="@+id/listReport"
+    <FrameLayout
+        android:id="@+id/rLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null" />
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/layout_report_add"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/item_press_white_gray">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/add"
+                android:layout_centerHorizontal="true"
+                android:padding="@dimen/userinfo_padding_12dp"
+                android:src="@drawable/ic_add_report" />
+            w
+
+            <TextView
+                android:id="@+id/add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/add_report"
+                android:textSize="24sp" />
+
+        </RelativeLayout>
+
+        <ListView
+            android:id="@+id/listview_report"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
 
 </LinearLayout>
