--- a/app/src/main/res/layout/report_advice_frag.xml
+++ b/app/src/main/res/layout/report_advice_frag.xml
@@ -8,7 +8,7 @@
         android:id="@+id/listview_adcive_report"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:button="@null"
+        android:divider="@null"
         android:scrollbars="none" />
 
 </FrameLayout>
