--- a/app/src/main/res/layout/report_error_frag.xml
+++ b/app/src/main/res/layout/report_error_frag.xml
@@ -9,6 +9,6 @@
         android:id="@+id/listview_error_report"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:button="@null" />
+        android:divider="@null" />
 
 </FrameLayout>
