--- a/app/src/main/res/drawable/shape_center_normal.xml
+++ b/app/src/main/res/drawable/shape_center_normal.xml
@@ -14,7 +14,7 @@
     <item>
         <shape>
             <!--    边框颜色 -->
-            <solid android:color="@color/gray_ee" />
+            <solid android:color="@color/gray_f2" />
         </shape>
     </item>
     <!-- 给View的上 左  右设置8dp的边框 -->
