--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,10 +13,17 @@
     <dimen name="actionbar_high_44dp">44dp</dimen>
     <dimen name="actionbar_padding">10dp</dimen>
     <dimen name="edittext_high">47dp</dimen>
+    <dimen name="padding_15dp">15dp</dimen>
+    <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="padding_10dp">10dp</dimen>
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_9dp">9dp</dimen>
     <dimen name="divider">0.8dp</dimen>
     <dimen name="divider_1dp">1dp</dimen>
     <dimen name="divider_2dp">2dp</dimen>
+    <dimen name="divider_9dp">9dp</dimen>
     <dimen name="bg_corners">8dp</dimen>
+    <dimen name="corners">6dp</dimen>
     <dimen name="tab_report_corners">24dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="mine_img_rightpadding">8dp</dimen>
