--- a/app/src/main/res/drawable/shape_btn_corners_lightgray.xml
+++ b/app/src/main/res/drawable/shape_btn_corners_lightgray.xml
@@ -5,6 +5,6 @@
     <corners android:radius="50dp"/>
 
     <!-- 填充 -->
-    <solid android:color="@color/divider_d3"/>
+    <solid android:color="@color/divider_dd"/>
 
 </shape>
