--- a/app/src/main/res/drawable/shape_tableft_checked.xml
+++ b/app/src/main/res/drawable/shape_tableft_checked.xml
@@ -9,7 +9,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray_ee"
+        android:color="@color/gray_f2"
 
         />
 
