--- a/app/src/main/res/layout/advice_frag.xml
+++ b/app/src/main/res/layout/advice_frag.xml
@@ -37,7 +37,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/divider"
-                android:background="@color/divider_d3" />
+                android:background="@color/divider_dd" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -66,7 +66,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/divider"
-                android:background="@color/divider_d3" />
+                android:background="@color/divider_dd" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -94,7 +94,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/divider"
-                android:background="@color/divider_d3" />
+                android:background="@color/divider_dd" />
 
             <Button
                 android:id="@+id/btn_commit_advice"
