--- a/app/src/main/res/layout/banner_frag.xml
+++ b/app/src/main/res/layout/banner_frag.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:padding="@dimen/padding_10dp">
 
 
     <!--<ImageView-->
@@ -16,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/banner1" />
+        android:src="@drawable/banner" />
 
 
 </RelativeLayout>
