--- a/app/src/main/res/layout/consult_grade_frag.xml
+++ b/app/src/main/res/layout/consult_grade_frag.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/divider"
             android:layout_weight="1"
-            android:background="@color/gray_ee" />
+            android:background="@color/gray_f2" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/divider"
             android:layout_weight="1"
-            android:background="@color/gray_ee" />
+            android:background="@color/gray_f2" />
     </LinearLayout>
 
     <LinearLayout
