--- a/app/src/main/res/layout/divider_dd_margin.xml
+++ b/app/src/main/res/layout/divider_dd_margin.xml
@@ -5,8 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider"
         android:background="@color/white"
-        android:paddingLeft="@dimen/userinfo_padding_12dp"
-        android:paddingRight="@dimen/userinfo_padding_12dp"
-        android:src="@color/divider_d3" />
+        android:paddingLeft="@dimen/padding_10dp"
+        android:paddingRight="@dimen/padding_10dp"
+        android:src="@color/divider_dd" />
 
 </merge>
