--- a/app/src/main/res/layout/header_homelist.xml
+++ b/app/src/main/res/layout/header_homelist.xml
@@ -10,73 +10,132 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <include layout="@layout/divider_12dp" />
+    <!--<include layout="@layout/divider_9dp" />-->
 
     <com.ihaozuo.plamexam.common.RevealLayout
         android:layout_width="match_parent"
-        android:layout_height="176dp"
-        android:orientation="horizontal"
-        android:padding="12dp">
+        android:layout_height="132dp"
+        android:layout_marginTop="@dimen/divider_9dp"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-        <TextView
+        <LinearLayout
             android:id="@+id/btn_report"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/androidColorE"
-            android:gravity="center"
-            android:text="@string/report"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textsize_h1" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_report_home" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_8dp"
+                android:text="@string/report"
+                android:textColor="@color/gray_33"
+                android:textSize="@dimen/textsize_h2" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
 
         <View
-            android:layout_width="12dp"
-            android:layout_height="match_parent" />
+            android:layout_width="@dimen/divider"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/padding_10dp"
+            android:layout_marginTop="@dimen/padding_10dp"
+            android:background="@color/divider_dd" />
 
-        <TextView
+        <LinearLayout
             android:id="@+id/btn_consult"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/androidColorC"
-            android:gravity="center"
-            android:text="@string/health_consult"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textsize_h1" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_consult_home" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_8dp"
+                android:gravity="center"
+                android:text="@string/health_consult"
+                android:textColor="@color/gray_33"
+                android:textSize="@dimen/textsize_h2" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+
     </com.ihaozuo.plamexam.common.RevealLayout>
 
-    <include layout="@layout/divider_d3" />
+    <!--<include layout="@layout/divider_dd" />-->
 
     <RelativeLayout
         android:id="@+id/layout_home_news"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_high_44dp"
+        android:layout_marginTop="@dimen/divider_9dp"
         android:background="@drawable/item_press_white_gray"
         android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/img_news"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/userinfo_padding_12dp"
-            android:src="@drawable/ic_news_home" />
+            android:layout_marginLeft="@dimen/padding_15dp"
+            android:src="@drawable/line_red_shape" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/userinfo_padding_12dp"
+            android:layout_marginLeft="@dimen/padding_10dp"
             android:layout_toRightOf="@+id/img_news"
-            android:text="@string/tab_news"
-            android:textColor="@color/gray_28"
+            android:text="@string/daily_news"
+            android:textColor="@color/gray_33"
             android:textSize="@dimen/textsize_h2" />
 
-        <include layout="@layout/next_set_right_layout" />
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/padding_15dp"
+            android:src="@drawable/ic_news_more" />
 
 
     </RelativeLayout>
 
-    <include layout="@layout/divider_d3" />
+    <!--<include layout="@layout/divider_dd" />-->
 
 </LinearLayout>
