--- a/app/src/main/res/layout/item_newslist.xml
+++ b/app/src/main/res/layout/item_newslist.xml
@@ -3,9 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/card_margin"
-    android:layout_marginLeft="@dimen/card_margin"
-    android:layout_marginRight="@dimen/card_margin"
     app:cardCornerRadius="@dimen/card_margin"
     app:cardUseCompatPadding="true">
     <!--app:cardCornerRadius="4dp"-->
@@ -19,22 +16,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_press_white_gray"
-        android:padding="12dp">
+        android:paddingBottom="@dimen/padding_10dp"
+        android:paddingLeft="@dimen/padding_15dp"
+        android:paddingRight="@dimen/padding_8dp"
+        android:paddingTop="@dimen/padding_10dp">
 
         <ImageView
             android:id="@+id/img_newslist"
+
             android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_height="68dp"
+            android:layout_marginRight="@dimen/padding_10dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_logo" />
 
         <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_newslist"
+            android:maxLines="1"
             android:text="艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼亚"
-            android:textSize="20dp" />
+            android:textColor="@color/gray_33"
+            android:textSize="@dimen/textsize_h2" />
+
+        <TextView
+            android:id="@+id/tvSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvTitle"
+            android:layout_marginTop="@dimen/padding_10dp"
+            android:layout_toRightOf="@+id/img_newslist"
+            android:maxLines="2"
+            android:text="艾欧尼亚艾欧尼亚艾艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼亚欧尼亚艾欧尼亚"
+            android:textColor="@color/gray_99"
+            android:textSize="@dimen/textsize_h4" />
 
     </RelativeLayout>
 
