--- a/app/src/main/res/layout/item_reportlist_error.xml
+++ b/app/src/main/res/layout/item_reportlist_error.xml
@@ -32,7 +32,7 @@
             android:layout_height="@dimen/divider"
             android:layout_below="@+id/tvTitle"
             android:layout_marginBottom="8dp"
-            android:background="@color/divider_d3"
+            android:background="@color/divider_dd"
             android:visibility="visible" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="阿斯蒂芬"
-            android:textColor="@color/gray_28"
+            android:textColor="@color/gray_33"
             android:textSize="@dimen/textsize_h3_16sp" />
 
         <TextView
