--- a/app/src/main/res/layout/set_sys_frag.xml
+++ b/app/src/main/res/layout/set_sys_frag.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_ee"
+    android:background="@color/gray_f2"
     android:orientation="vertical"
     tools:context="com.ihaozuo.plamexam.view.mine.settings.SysSetFragment">
 
