--- a/app/src/main/res/layout/user_info_frag.xml
+++ b/app/src/main/res/layout/user_info_frag.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_ee">
+        android:background="@color/gray_f2">
 
         <LinearLayout
 
@@ -64,7 +64,7 @@
                     tools:text="张三" />
             </RelativeLayout>
 
-            <include layout="@layout/divider_d3_margin" />
+            <include layout="@layout/divider_dd_margin" />
 
             <RelativeLayout
                 android:id="@+id/layoutUserPhone"
@@ -96,7 +96,7 @@
                 <include layout="@layout/next_set_right_layout" />
             </RelativeLayout>
 
-            <include layout="@layout/divider_d3" />
+            <include layout="@layout/divider_dd" />
 
 
         </LinearLayout>
