--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="androidColorA">#FF33B5E5</color>
+    <color name="androidColorA">#FF309BF2</color>
     <color name="androidColorB">#FFAA66CC</color>
     <color name="androidColorC">#FF99CC00</color>
     <color name="androidColorD">#FFFFBB33</color>
@@ -8,20 +8,23 @@
 
     <color name="tab_report_checked">#FFFF4444</color>
 
-    <color name="main_color_blue">#3AB4F1</color>
+    <color name="main_color_blue">#309BF2</color>
+    <color name="main_color_red">#F25353</color>
     <color name="main_color_green">#4ED625</color>
 
     <color name="edittext_color">#666666</color>
-    <color name="divider_d3">#D3D3D3</color>
     <color name="divider_e8">#E8E8E8</color>
+    <color name="divider_dd">#DDDDDD</color>
     <color name="gray">#808080</color><!--灰色 -->
-    <color name="gray_28">#282828</color>
+    <color name="gray_33">#333333</color>
     <color name="gray_66">#666666</color>
+    <color name="gray_99">#999999</color>
     <color name="gray_b2">#B2B2B2</color>
-    <color name="gray_ee">#EEEEEE</color>
+    <!--<color name="gray_ee">#EEEEEE</color>-->
+    <color name="gray_f2">#F2F2F2</color>
     <color name="gray_f6">#F6F6F6</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="light_blue">#6593cb</color>
-    <color name="reveal_color">#1B000000</color><!--水纹颜色-->
+    <color name="reveal_color">#11000000</color><!--水纹颜色-->
 </resources>
